--- a/assets/sass/components/_icons.scss
+++ b/assets/sass/components/_icons.scss
@@ -12,7 +12,7 @@
 		cursor: default;
 		list-style: none;
 		padding-left: 0;
-        display: flex;
+		display: inline;
         align-content: center;
 
 		li {
